objects/VU_AccountContact__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <label>Churn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRBundleName__c</fullName>
        <label>DR Bundle Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRError__c</fullName>
        <label>DR Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRProgressData__c</fullName>
        <label>DR Progress Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRStatus__c</fullName>
        <label>DR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Premises__c</fullName>
        <label>Premises</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <type>TextArea</type>
    </fields>
    <label>VU AccountContact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DRBundleName__c</columns>
        <columns>DRProgressData__c</columns>
        <columns>DRError__c</columns>
        <columns>DRStatus__c</columns>
        <columns>AccountName__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>Churn__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>MailingStreet__c</columns>
        <columns>MailingState__c</columns>
        <columns>Premises__c</columns>
        <columns>MobileNumber__c</columns>
        <columns>PhoneNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VU AccountContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VU AccountContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>